--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,14 +1,16 @@
 compressionLevel: mixed
 
+nodeLinker: node-modules
+
 packageExtensions:
   eslint-module-utils@*:
     dependencies:
-      eslint-import-resolver-node: '*'
+      eslint-import-resolver-node: "*"
   next@*:
     dependencies:
-      eslint-import-resolver-node: '*'
+      eslint-import-resolver-node: "*"
   react-error-boundary@*:
     dependencies:
-      prop-types: '*'
+      prop-types: "*"
 
 yarnPath: .yarn/releases/yarn-4.0.2.cjs
