--- a/packages/slate-react/package.json
+++ b/packages/slate-react/package.json
@@ -19,6 +19,8 @@
     "is-hotkey": "^0.2.0",
     "is-plain-object": "^5.0.0",
     "lodash": "^4.17.21",
+    "react-virtualized": "^9.22.5",
+    "react-window": "^1.8.10",
     "scroll-into-view-if-needed": "^3.1.0",
     "tiny-invariant": "1.3.1"
   },
@@ -31,6 +33,9 @@
     "@types/lodash": "^4.14.200",
     "@types/react": "^18.2.41",
     "@types/react-dom": "^18.2.17",
+    "@types/react-virtualized": "^9",
+    "react-window": "^1.8.10",
+    "@types/react-window": "^1",
     "@types/resize-observer-browser": "^0.1.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
